--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ body {
 	padding: 0;
 	color: #333;
     background-color: #eee;
-    font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 li {
@@ -113,7 +113,7 @@ ul {
   background-size: cover;
   height: 100vh;
     color: #fff;
-    font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
   
 .hero:before {
