--- a/css/comp.css
+++ b/css/comp.css
@@ -65,13 +65,13 @@ Layout styles
 	margin: 0 auto;
 }
 
-.header
+/*.header
 {
     background:url('http://blogs-images.forbes.com/jacobmorgan/files/2014/05/internet-of-things-2.jpg?width=960') no-repeat center top #FFF;
     color: #fff;
-	/*background: #999;*/
+	/*background: #999;
 	padding: 1em 1.25em;
-}
+}*/
 
 .header-heading { margin: 0; }
 
