--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ body {
 	padding: 0;
 	color: #333;
     background-color: #eee;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Source Code Pro', monospace;
 }
 
 li {
