--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ ul {
   line-height: 70px;
 }
 #menu {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Catamaran', sans-serif;
   background-color: #007F16;
   width: 593px;
   float: left;
