--- a/css/comp.css
+++ b/css/comp.css
@@ -9,7 +9,7 @@ body
 	color: #333;
 	background-color: #eee;
 	/*font: 1em/1.2 "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;*/
-    font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     
 }
 
