--- a/css/comp.css
+++ b/css/comp.css
@@ -23,7 +23,9 @@ h1,h2,h3,h4,h5,h6
 h1 { font-size: 2.25em; } /* 36px */
 h2 { font-size: 1.75em; } /* 28px */
 h3 { font-size: 1.375em; } /* 22px */
-h4 { font-size: 1.125em; } /* 18px */
+h4 { font-size: 1.125em; 
+    font-family: 'Sahitya', serif;
+    } /* 18px */
 h5 { font-size: 1em; } /* 16px */
 h6 { font-size: .875em; } /* 14px */
 
