--- a/css/comp.css
+++ b/css/comp.css
@@ -8,8 +8,7 @@ body
 	padding: 0;
 	color: #333;
 	background-color: #eee;
-	/*font: 1em/1.2 "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;*/
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Cuprum', sans-serif;
     
 }
 
