--- a/css/comp.css
+++ b/css/comp.css
@@ -8,7 +8,7 @@ body
 	padding: 0;
 	color: #333;
 	background-color: #eee;
-	font-family: 'Cuprum', sans-serif;
+    font-family: 'Pacifico', cursive;
     
 }
 
