--- a/css/comp.css
+++ b/css/comp.css
@@ -8,7 +8,7 @@ body
 	padding: 0;
 	color: #333;
 	background-color: #eee;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Noto Sans', sans-serif;
     
 }
 
@@ -17,14 +17,13 @@ h1,h2,h3,h4,h5,h6
 	margin: 0 0 .5em;
 	font-weight: 500;
 	line-height: 1.1;
+    font-family: 'Playfair Display', serif;
 }
 
 h1 { font-size: 2.25em; } /* 36px */
 h2 { font-size: 1.75em; } /* 28px */
 h3 { font-size: 1.375em; } /* 22px */
-h4 { font-size: 1.125em; 
-    font-family: 'Sahitya', serif;
-    } /* 18px */
+h4 { font-size: 1.125em; } /* 18px */
 h5 { font-size: 1em; } /* 16px */
 h6 { font-size: .875em; } /* 14px */
 
