--- a/css/comp.css
+++ b/css/comp.css
@@ -19,9 +19,15 @@ h1,h2,h3,h4,h5,h6
 	line-height: 1.1;
 }
 
-h1 { font-size: 2.25em; } /* 36px */
-h2 { font-size: 1.75em; } /* 28px */
-h3 { font-size: 1.375em; } /* 22px */
+h1 { font-size: 2.25em; 
+    font-family: 'Dosis', sans-serif;
+    } /* 36px */
+h2 { font-size: 1.75em; 
+    font-family: 'Dosis', sans-serif;
+    } /* 28px */
+h3 { font-size: 1.375em; 
+    font-family: 'Dosis', sans-serif;
+    } /* 22px */
 h4 { font-size: 1.125em; 
      font-family: 'Playfair Display', serif;
     } /* 18px */
