--- a/css/comp.css
+++ b/css/comp.css
@@ -7,7 +7,7 @@ body
 	margin: 0;
 	padding: 0;
 	color: #333;
-	background-color: #eee;
+	background-color: #403E34;
     font-family: 'Noto Sans', sans-serif;
     
 }
