--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ body
 
 h1,h2,h3,h4,h5,h6
 {
-	margin: 0 0 .5em;
+    color: #403830 
+    margin: 0 0 .5em;
 	font-weight: 500;
 	line-height: 1.1;
 }
