--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body
 
 h1,h2,h3,h4,h5,h6
 {
-    color: #403830 
+    color: #403830; 
     margin: 0 0 .5em;
 	font-weight: 500;
 	line-height: 1.1;
@@ -89,6 +89,7 @@ Layout styles
 
 .nav-bar
 {
+    position: fixed;
     color: #FFF9CF;
     background: #000;
 	padding: 0;
