--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,11 @@ p
 }
 
 hero {
-  background: url("https://www.rpnation.com/uploads/monthly_2016_09/maxresdefault.jpg.7dac46df1522e118157c5a741893b65a.jpg") no-repeat center center;
-  background-size: 25%;
-  height: 100vh; 
+     width: 100%;
+    background-image: url("http://weknowyourdreams.com/images/space/space-04.jpg");
+    background-size: auto 100%;
+    background-position: center top;
+    background-repeat: no-repeat;
     }
 
 hr
