--- a/css/main.css
+++ b/css/main.css
@@ -99,9 +99,9 @@ Layout styles
 .hero {
     
     background-image: url("http://weknowyourdreams.com/images/space/space-04.jpg");
-    background-size: auto 100%;
-    background-position: center top;
-    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
     }
 
 
