--- a/css/main.css
+++ b/css/main.css
@@ -95,14 +95,28 @@ Layout styles
 	padding: 0;
 }
 
-
-.hero {
+.hero
+{
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url(http://weknowyourdreams.com/images/space/space-04.jpg);
+  background-size: cover;
+  width: 300px;
+  height: 200px;
+  margin: 10px 0 0 10px;
+  position: relative;
+  float: left;
+}
+/*.hero {
     
     background-image: url("http://weknowyourdreams.com/images/space/space-04.jpg") no-repeat center center;
     padding:6px; 
     background-size: cover;
      height: 100vh;
-    }
+    }*/
 
 
 .content
