--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,30 @@ a:active { color: red; }
 Layout styles
 ------------------------*/
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
+
 .container
 {
     max-width: 50em;
@@ -168,72 +192,4 @@ Nav
 	color: white;
 	background-color: red;
 }
-/* -----------------------		
- -Single styles		
- -------------------------*/		
- 		
- .img-responsive { max-width: 100%; }		
- 		
- .btn		
- {		
- 	color: #fff !important;		
- 	background-color: royalblue;		
-    border-color: #222;		
- 	display: inline-block;		
- 	padding: .5em 1em;		
- 	margin-bottom: 0;		
- 	font-weight: 400;		
- 	line-height: 1.2;		
- 	text-align: center;		
- 	white-space: nowrap;		
- 	vertical-align: middle;		
- 	cursor: pointer;		
- 	border: 1px solid transparent;		
- 	border-radius: .2em;		
- 	text-decoration: none;		
- }		
- 		
- .btn:hover		
- {		
- 	color: #fff !important;		
- 	background-color: green;		
- }		
- 		
- .btn:focus		
- {		
- 	color: #fff !important;		
- 	background-color: black;		
- }		
- 		
- .btn:active		
- {		
- 	color: #fff !important;		
- 	background-color: red;		
- }		
- 		
- .table		
- {		
- 	width: 100%;		
- 	max-width: 100%;		
- 	margin-bottom: 20px;		
- }		
- 		
- .list-unstyled		
- {		
- 	padding-left: 0;		
- 	list-style: none;		
- }		
- 		
- .list-inline		
- {		
- 	padding-left: 0;		
- 	margin-left: -5px;		
- 	list-style: none;		
- }		
- 		
- .list-inline > li		
- {		
- 	display: inline-block;		
- 	padding-right: 5px;		
- 	padding-left: 5px;		
- }		
+	
