--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,27 @@ li a:hover {
 	padding: 1em 1.25em;
 }
 
+div.img {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
 /* -----------------------
 Nav
 ------------------------*/
