--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body
 	height: 100%; 
     text-align: center;
 	padding: 0;
-	color: #E5E0BB;
+	color: #3E3E40;
 	background-color: #403E34;
     font-family: 'Noto Sans', sans-serif;
     
@@ -37,7 +37,7 @@ h1,h2,h3,h4,h5,h6
 }
 
 h1 { font-size: 2.25em; 
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     } /* 36px */
 h2 { font-size: 1.75em; 
     font-family: 'Dosis', sans-serif;
@@ -62,6 +62,7 @@ p
     
     max-width: 600px;   
    margin: 0 auto 20px;
+    font-family: 'Alegreya', serif;
 }
 
 hr
