--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ Base styles
 html
 {
  height: 100%;   
- background-color: #3E3E40;
+ background-color: black;
 }
 
 body
@@ -14,7 +14,7 @@ body
     text-align: center;
 	padding: 0;
 	color: #3E3E40;
-	background-color: #403E34;
+	background-color: black;
     font-family: 'Noto Sans', sans-serif;
     
 }
