--- a/css/main.css
+++ b/css/main.css
@@ -142,8 +142,9 @@ li a:hover {
 .content
 {
 	padding: 1em 1.25em;
-	background-color: black;
-    color: white;
+	background-color: #F9F9FF;
+    color: #3E3E40;
+    max-width: 800px;
 }
 
 .footer
