--- a/css/main.css
+++ b/css/main.css
@@ -133,8 +133,8 @@ li a:hover {
 .nav-bar
 {
    
-    color: #FFF9CF;
-    background: #000;
+    color: #3E3E40;
+    background: #F9F9FF;
 	padding: 0;
 }
 
