--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ h3 { font-size: 1.375em;
 h4 { font-size: 1.125em; 
      font-family: 'Playfair Display', serif;
     } /* 18px */
-h5 { font-size: 1em; } /* 16px */
+h5 { font-size: 1em;
+    font-family: 'Alegreya', serif;} /* 16px */
 h6 { font-size: .875em; } /* 14px */
 
 /*p
