--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body
 #banner {
   clear: both;
   background-image: url("../img/internet.jpg");
-  height: 100%;
+  height: 363px;
   background-size: cover;
   margin-bottom: 50px;
   color: white;
