--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body
   clear: both;
   background-image: url("../img/internet.jpg");
   height: 363px;
+  width: 960 px;
   margin-bottom: 50px;
   color: white;
   
