--- a/css/test.css
+++ b/css/test.css
@@ -3,3 +3,69 @@ body
   background: #7c7c7c;
   font-family: Helvetica, Arial, Sans-Serif;
 }
+
+#container
+{
+ width: 960px; margin: 0 auto;
+    background: #fff;
+}
+
+#header
+{
+ height: 363px;
+    background: #FDFDFF;
+}
+
+#header h1
+{
+ text-indent: -9999px;   
+}
+
+#content
+{
+ overflow: auto;   
+}
+
+#content .sidebar
+{
+    width: 180px; float: left;
+    background: #3F3F40;
+}
+
+#content .sidebar.primary { padding: 0 20px 20px 30px;}
+#content .sidebar.secondary { padding: 0 30px 20px 20px;}
+#content .sidebar li
+{
+ list-style: none;
+    font-size: 16px; 
+    color: #666;
+    line-height: 24px;
+}
+
+#content #main
+{
+ width: 460px;
+ float: left;
+ padding: 0 20px 20px 20px;
+}
+
+#content #main h2
+{
+ font: italic 30px Georgia, Serif;
+ color: #aaa;
+ margin: 0 0 10px 0;
+}
+
+#content #main p
+{
+ font-size: 14px;
+ color: #666;
+ line-height: 24px;
+ margin: 0 0 15px 0;
+}
+
+#footer
+{
+ height: 86px;
+ background: #3F3F40;
+}
