--- a/css/test.css
+++ b/css/test.css
@@ -69,3 +69,29 @@ body
  height: 86px;
  background: #3F3F40;
 }
+/* Nav Bar */
+ul {
+    height: 86px;
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111;
+}
